--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,13 @@ jobs:
         with:
           node-version: 16
           cache: npm
-      - run: npm ci
+      - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 8
+      #- run: pnpm ci
       - name: Build
-        run: npm run docs:build
+      #  run: npm run docs:build
+        run: pnpm build 
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
