--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: pnpm/action-setup@v2.2.4
         with:
           version: 8
-      - run : npm ci
+      - run : pnpm install --frozen-lockfile
       - name: Build
         run: pnpm build 
       - uses: actions/configure-pages@v2
