--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           version: 8
       - run : pnpm install --no-frozen-lockfile
       - name: Build
-        run: pnpm build 
+        run: pnpm run build 
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
